@@ -350,13 +350,14 @@ class ASMEndpoint(object):
 
     def is_loggedin(self, session):
         """
-        Returns true if the user is logged in and the user is valid (ie. has not been deleted)
+        Returns true if the user is logged in and the user is valid 
+        (ie. has not been deleted or had login disabled)
         """
         if "user" not in session: return False
         if session.user is None: return False
         if "dbo" not in session: return False
         if session.dbo is None: return False
-        users = session.dbo.query_cache("SELECT UserName FROM users", age=300)
+        users = session.dbo.query_cache("SELECT UserName FROM users WHERE DisableLogin=0", age=300)
         for u in users:
             if u.USERNAME == session.user:
                 return True
